<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_marginRight="@dimen/dp_30"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign in to your"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40_dp"
            android:layout_marginTop="@dimen/margin_40_dp"
            android:background="@drawable/editshape"
            android:hint="@string/email_or_phone"
            android:paddingLeft="@dimen/space20"
            android:paddingRight="@dimen/space20"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space10">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_40_dp"
                android:background="@drawable/editshape"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/space20"
                android:paddingRight="@dimen/space20" />

            <TextView
                android:id="@+id/txForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:layout_marginRight="@dimen/space20"
                android:text="Forgot?"
                android:textColor="@color/colorPrimary" />
        </FrameLayout>

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40_dp"
            android:layout_marginTop="@dimen/space20"
            android:text="@string/signin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/space20"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textsign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"/>
        <TextView
            android:id="@+id/txSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Sign Up"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    </LinearLayout>
</FrameLayout>