<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.RegistrationActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/margin_40_dp"
        android:layout_height="@dimen/margin_40_dp"
        android:layout_marginLeft="@dimen/space10"
        android:layout_marginTop="@dimen/space10"
        android:src="@drawable/left" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_70"
        android:layout_marginRight="@dimen/dp_30"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Your"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Account"
            android:textColor="@color/colorPrimary"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40_dp"
            android:layout_marginTop="@dimen/margin_40_dp"
            android:background="@drawable/editshape"
            android:hint="@string/username"
            android:paddingLeft="@dimen/space20"
            android:paddingRight="@dimen/space20" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40_dp"
            android:layout_marginTop="@dimen/space10"
            android:background="@drawable/editshape"
            android:hint="Email"
            android:paddingLeft="@dimen/space20"
            android:paddingRight="@dimen/space20" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40_dp"
            android:layout_marginTop="@dimen/space10"
            android:background="@drawable/editshape"
            android:hint="Phone"
            android:inputType="number"
            android:paddingLeft="@dimen/space20"
            android:paddingRight="@dimen/space20" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40_dp"
            android:layout_marginTop="@dimen/space10"
            android:background="@drawable/editshape"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/space20"
            android:paddingRight="@dimen/space20" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/ButtonBlue"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40_dp"
            android:layout_marginTop="@dimen/space20"
            android:text="@string/signup" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="@dimen/space20"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textaccountd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already an account?" />

        <TextView
            android:id="@+id/txSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  Sign In"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>